tests/baselines/reference/declarationEmitDestructuringOptionalBindingParametersInOverloads(strict=true).errors.txt
declarationEmitDestructuringOptionalBindingParametersInOverloads.ts(1,10): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
declarationEmitDestructuringOptionalBindingParametersInOverloads.ts(5,10): error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.


==== declarationEmitDestructuringOptionalBindingParametersInOverloads.ts (2 errors) ====
    function foo([x, y, z] ?: [string, number, boolean]);
             ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo(...rest: any[]) {
    }
    
    function foo2( { x, y, z }?: { x: string; y: number; z: boolean });
             ~~~~
!!! error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo2(...rest: any[]) {
    
    }